# GSP089-Terraform

./: .gitignore  AGENTS.md  LICENSE  LICENSE-docs.md  README.md  main.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf
samples/opentelemetry/: README.md  ops-agent-otlp-config.yaml  otel_demo.py  pyproject.toml
