[project]
name = "gsp089-otel-demo"
version = "0.1.0"
description = "OpenTelemetry demo for the GSP089 Terraform lab."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opentelemetry-api>=1.30,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.30,<2",
  "opentelemetry-sdk>=1.30,<2",
]

[tool.uv]
package = false
